# scalar_hackathon

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  server.py
app/: env.py  grader.py  models.py  tasks.py
server/: app.py
