[project]
name = "smart-inbox-env"
version = "0.1.0"
description = "AI email triage OpenEnv environment"
authors = [
    { name="Sai Teja", email="your-email@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[tool.openenv]
entrypoint = "server:app"